# ES71-ComputerVision

./: .gitignore
Assignment2/: CMakeLists.txt  assignment2.cpp  assignment2.docx
Assignment3/1Build/: ObjectDetect
Assignment3/1Source/: main.cpp
Assignment3/2Build/: angleDetect
Assignment3/2Source/: CMakeLists.txt  main.cpp
Assignment3/3Build/: ObjectDetect
Assignment3/3Source/: CMakeLists.txt  main.cpp
Assignment3/4Build/: handDetect
Assignment3/4Source/: CMakeLists.txt  main.cpp
Assignment4/: assignment4.docx
Assignment4/Data/: MINES_VIS 2018 week4.pptx  affine.py
Assignment4/Exercise1/: CMakeLists.txt  assignment41.cpp  makebuild.bat
Assignment4/Exercise4/: CMakeLists.txt  assignment44.cpp
Assignment4/Exercise5/: CMakeLists.txt  assignment45.cpp
Assignment5/1Build/: stitching
Assignment5/1Source/: CMakeLists.txt  main.cpp
Assignment5/2Build/: stitching
Assignment5/2Source/: CMakeLists.txt  main.cpp
Assignment5/3Build/: object_detection
Assignment5/3Source/: CMakeLists.txt  main.cpp
Assignment6/: .gitignore  assignment6.ipynb  atempt 3.ipynb  plates.txt  test.ipynb
Assignment6/Threading/: t3.ipynb  t4.ipynb  t6.ipynb  t8.ipynb  ta.ipynb
Assignment6/Threading/.ipynb_checkpoints/: t1-Copy5-checkpoint.ipynb  t1-checkpoint.ipynb  t2-checkpoint.ipynb  t3-checkpoint.ipynb  t5-checkpoint.ipynb  t6-checkpoint.ipynb  t7-checkpoint.ipynb
template/: CMakeLists.txt  assignment.cpp
